--- a/docs/docs/classic-ml/deep-learning/index.mdx
+++ b/docs/docs/classic-ml/deep-learning/index.mdx
@@ -106,6 +106,16 @@ MLflow's tracking capabilities are tailor-made for the iterative nature of deep 
       ![Realtime tracking](/images/deep-learning/dl-tracking.gif)
     </div>
   </TabItem>
+
+  <TabItem label="Model Comparison" value="model-comparison">
+    #### Model Comparison
+
+    Track your all your DL checkpoints across epochs using the MLflow UI. Compare performance and quickly find the best checkpoints based on any metrics.
+
+    <div  style={{ width: "90%" }}>
+      ![](/images/deep-learning/dl-model-comparison.gif)
+    </div>
+  </TabItem>
 </Tabs>
 
 ### 🏆 Streamlined Model Management
