--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -173,6 +173,7 @@ You can customize the optimization process using `OptimizerConfig`, which includ
 - **num_instruction_candidates**: The number of candidate instructions to try.
 - **max_few_show_examples**: The maximum number of examples to show in few-shot demonstrations.
 - **optimizer_llm**: The LLM to use for optimization.
+- **verbose**: Whether to show optimizer logs during optimization.
 
 See <APILink fn="mlflow.genai.OptimizerConfig" /> for more details.
 
