--- a/docs/docs/genai/tracing/integrations/listing/dspy.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/dspy.mdx
@@ -26,7 +26,7 @@ mlflow.dspy.autolog()
 
 :::tip
 
-MLflow DSPy integration is not only about tracing. MLflow offers full tracking experience for DSPy, including model tracking, index management, and evaluation. Please checkout the **[MLflow DSPy Flavor](/llms/dspy)** to learn more!
+MLflow DSPy integration is not only about tracing. MLflow offers full tracking experience for DSPy, including model tracking, index management, and evaluation. Please see the **[MLflow DSPy Flavor](/genai/flavors/dspy)** to learn more!
 
 :::
 
