--- a/docs/docs/genai/tracing/integrations/listing/langchain.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/langchain.mdx
@@ -16,7 +16,7 @@ import TabItem from "@theme/TabItem";
 
 [LangChain](https://www.langchain.com/) is an open-source framework for building LLM-powered applications.
 
-[MLflow Tracing](../) provides automatic tracing capability for LangChain. You can enable tracing
+[MLflow Tracing](/genai/tracing) provides automatic tracing capability for LangChain. You can enable tracing
 for LangChain by calling the <APILink fn="mlflow.langchain.autolog" /> function, and nested traces are automatically logged to the active MLflow Experiment upon invocation of chains.
 
 ```python
@@ -27,7 +27,7 @@ mlflow.langchain.autolog()
 
 :::tip
 
-MLflow LangChain integration is not only about tracing. MLflow offers full tracking experience for LangChain, including model tracking, prompt management, and evaluation. Please checkout the **[MLflow LangChain Flavor](/llms/langchain)** to learn more!
+MLflow LangChain integration is not only about tracing. MLflow offers full tracking experience for LangChain, including model tracking, prompt management, and evaluation. Please checkout the **[MLflow LangChain Flavor](/genai/flavors/langchain)** to learn more!
 
 :::
 
