--- a/docs/docs/genai/tracing/integrations/listing/langgraph.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/langgraph.mdx
@@ -15,7 +15,7 @@ import TabItem from "@theme/TabItem";
 
 [LangGraph](https://www.langchain.com/langgraph) is an open-source library for building stateful, multi-actor applications with LLMs, used to create agent and multi-agent workflows.
 
-[MLflow Tracing](/tracing/) provides automatic tracing capability for LangGraph, as a extension of its LangChain integration. By enabling auto-tracing for LangChain by calling the <APILink fn="mlflow.langchain.autolog" /> function, MLflow will
+[MLflow Tracing](/genai/tracing) provides automatic tracing capability for LangGraph, as a extension of its LangChain integration. By enabling auto-tracing for LangChain by calling the <APILink fn="mlflow.langchain.autolog" /> function, MLflow will
 automatically capture the graph execution into a trace and log it to the active MLflow Experiment.
 
 ```python
@@ -26,7 +26,7 @@ mlflow.langchain.autolog()
 
 :::tip
 
-MLflow LangGraph integration is not only about tracing. MLflow offers full tracking experience for LangGraph, including model tracking, dependency management, and evaluation. Please checkout the **[MLflow LangChain Flavor](/llms/langchain)** to learn more!
+MLflow LangGraph integration is not only about tracing. MLflow offers full tracking experience for LangGraph, including model tracking, dependency management, and evaluation. Please checkout the **[MLflow LangChain Flavor](/genai/flavors/langchain)** to learn more!
 
 :::
 
@@ -127,7 +127,7 @@ ChatOpenAI_2:
 
 ### Adding spans within a node or a tool
 
-By combining auto-tracing with the [manual tracing APIs](/tracing/api/manual-instrumentation/), you can add child spans inside a node or tool, to get more detailed insights for the step.
+By combining auto-tracing with the [manual tracing APIs](/genai/tracing/app-instrumentation/manual-tracing), you can add child spans inside a node or tool, to get more detailed insights for the step.
 
 Let's take LangGraph's [Code Assistant](https://langchain-ai.github.io/langgraph/tutorials/code_assistant/langgraph_code_assistant/#graph) tutorial for example. The `check_code` node actually consists of two different validations for the generated code. You may want to add span for each validation to see which validation were executed. To do so, simply create manual spans inside the node function.
 
