--- a/docs/docs/genai/tracing/integrations/listing/openai-agent.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/openai-agent.mdx
@@ -9,7 +9,7 @@ import { APILink } from "@site/src/components/APILink";
 
 ![OpenAI Tracing via autolog](/images/llms/tracing/openai-agent-tracing.png)
 
-[MLflow Tracing](../) provides automatic tracing capability for [OpenAI Agents SDK](https://platform.openai.com/docs/guides/agents-sdk), a multi-agent framework developed by OpenAI. By enabling auto tracing
+[MLflow Tracing](/genai/tracing) provides automatic tracing capability for [OpenAI Agents SDK](https://platform.openai.com/docs/guides/agents-sdk), a multi-agent framework developed by OpenAI. By enabling auto tracing
 for OpenAI by calling the <APILink fn="mlflow.openai.autolog" /> function, MLflow will capture traces and log them to the active MLflow Experiment.
 
 ```python
