--- a/docs/docs/genai/tracing/integrations/listing/swarm.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/swarm.mdx
@@ -21,7 +21,7 @@ import TabItem from "@theme/TabItem";
 ![OpenAI Tracing via autolog](/images/llms/tracing/openai-swarm-tracing.png)
 
 
-[MLflow Tracing](../) provides automatic tracing capability for [OpenAI Swarm](https://github.com/openai/swarm), a multi-agent framework developed by OpenAI. By enabling auto tracing
+[MLflow Tracing](/genai/tracing) provides automatic tracing capability for [OpenAI Swarm](https://github.com/openai/swarm), a multi-agent framework developed by OpenAI. By enabling auto tracing
 for OpenAI by calling the <APILink fn="mlflow.openai.autolog" /> function, MLflow will capture nested traces and log them to the active MLflow Experiment upon invocation of OpenAI SDK.
 
 ```python
@@ -34,7 +34,7 @@ In addition to the basic LLM call tracing for OpenAI, MLflow captures the interm
 
 :::tip
 
-MLflow OpenAI integration is not only about tracing. MLflow offers full tracking experience for OpenAI, including model tracking, prompt management, and evaluation. Please checkout the **[MLflow OpenAI Flavor](/llms/openai)** to learn more!
+MLflow OpenAI integration is not only about tracing. MLflow offers full tracking experience for OpenAI, including model tracking, prompt management, and evaluation. Please checkout the **[MLflow OpenAI Flavor](/genai/flavors/openai)** to learn more!
 
 :::
 
