--- a/docs/docs/genai/tracing/observe-with-traces/ui.mdx
+++ b/docs/docs/genai/tracing/observe-with-traces/ui.mdx
@@ -1,12 +1,15 @@
+import DatabricksCallout from "@site/src/components/DatabricksCallout"
 import { APILink } from "@site/src/components/APILink";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
 # MLflow Tracing UI
 
+<DatabricksCallout docsPath="/mlflow3/genai/tracing/observe-with-traces/ui" />
+
 ## Traces within MLflow Experiments
 
-After logging your traces, you can view them in the [MLflow UI](/tracking/#tracking_ui), under the "Traces" tab in the main experiment page. This tab is also available within the individual run pages, if your trace was logged within a run context.
+After logging your traces, you can view them in the [MLflow UI](/ml/tracking/#tracking_ui), under the "Traces" tab in the main experiment page. This tab is also available within the individual run pages, if your trace was logged within a run context.
 
 ![MLflow Tracking UI](/images/llms/tracing/trace-experiment-ui.png)
 
@@ -14,7 +17,7 @@ This table includes high-level information about the traces, such as the trace I
 
 <Tabs>
   <TabItem value="search" label="Search" default>
-    Using the search bar in the UI, you can easily filter your traces based on name, tags, or other metadata. Check out the [search docs](/tracing/api/search/) for details about the query string format.
+    Using the search bar in the UI, you can easily filter your traces based on name, tags, or other metadata. Check out the [search docs](/genai/tracing/search-traces) for details about the query string format.
 
     ![Searching traces](/images/llms/tracing/trace-session-id.gif)
   </TabItem>
@@ -48,17 +51,17 @@ you to debug your applications without having to tab out of your development env
 
 ![Jupyter Trace UI](/images/llms/tracing/jupyter-trace-ui.png)
 
-This feature requires using an [MLflow Tracking Server](/tracking/server/), as
+This feature requires using an [MLflow Tracking Server](/ml/tracking/server), as
 this is where the UI assets are fetched from. To get started, simply ensure that the MLflow
 Tracking URI is set to your tracking server (e.g. `mlflow.set_tracking_uri("http://localhost:5000")`).
 
 By default, the trace UI will automatically be displayed for the following events:
 
-1. When the cell code generates a trace (e.g. via  [automatic tracing](/tracing/#automatic-tracing), or by running a manually traced function)
+1. When the cell code generates a trace (e.g. via  [automatic tracing](/genai/tracing/app-instrumentation/automatic), or by running a manually traced function)
 2. When <APILink fn="mlflow.search_traces" /> is called
 3. When a <APILink fn="mlflow.entities.Trace" /> object is displayed (e.g. via IPython's `display` function, or when it is the last value returned in a cell)
 
 To disable the display, simply call <APILink fn="mlflow.tracing.disable_notebook_display" />, and rerun the cell
 containing the UI. To enable it again, call <APILink fn="mlflow.tracing.enable_notebook_display" />.
 
-For a more complete example, try running this [demo notebook](/tracing/tutorials/jupyter-trace-demo/)!
+For a more complete example, try running this [demo notebook](/genai/tracing/tutorials/jupyter-trace-demo/)!
